updated the build workflow for main repo.

--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -85,7 +85,7 @@ jobs:
 
     - name: Deploy documentation sphinx
       uses: JamesIves/github-pages-deploy-action@3.7.1
-      if: github.event_name == 'push' && github.repository == 'henilp105/fortran-lang.org' && github.ref == 'refs/heads/master'
+      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
