--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -84,10 +84,10 @@ jobs:
     - run: touch build/html/.nojekyll
 
     - name: Deploy documentation sphinx
-      uses: JamesIves/github-pages-deploy-action@3.7.1
+      uses: JamesIves/github-pages-deploy-action@4.0.0
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: build/html
-        CLEAN: false
+        token: ${{ secrets.GITHUB_TOKEN }}
+        branch: gh-pages
+        folder: build/html
+        clean: false
