updated github pages deploy action to v4.4.0

--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -84,7 +84,7 @@ jobs:
     - run: touch build/html/.nojekyll
 
     - name: Deploy documentation sphinx
-      uses: JamesIves/github-pages-deploy-action@4.0.0
+      uses: JamesIves/github-pages-deploy-action@v4.4.0
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
