--- a/.github/workflows/buildPRPreview.yml
+++ b/.github/workflows/buildPRPreview.yml
@@ -70,7 +70,7 @@ jobs:
         echo "pull_request: ${{github.event.issue.number}}" >> _config.yml
         
     - name: Define output directory
-      run: cat _config.yml
+      run: ls
         
     
     # Download latest fpm-registry index
