--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ news:
     url: /news
     feed: /news.xml
 
-url: "https://fortran-lang.org"
+url: "https://fortran-lang.github.io"
 
 plugins:
 
@@ -22,3 +22,5 @@ exclude:
     - LICENSE
     - README.md
     - vendor/
+    
+baseurl: /fortran-lang.org
