add redirects to new page

--- a/.github/workflows/buildSite.yml
+++ b/.github/workflows/buildSite.yml
@@ -32,6 +32,12 @@ jobs:
       with:
         path: ${{env.PUBLISH_DIR}}
         ref: 'gh-pages'
+
+    - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
     
     # Install ruby 2.7.x
     - uses: ruby/setup-ruby@v1
@@ -52,10 +58,17 @@ jobs:
         wget ${{env.FPM_INDEX}} -O ${{env.SRC_DIR}}/_data/fpm_registry_index.json
 
     # Run Jekyll build and copy output to PUBLISH_DIR
-    - name: Build Jekyll Site
+    # - name: Build Jekyll Site
+    #   run: |
+    #     cd ${{env.SRC_DIR}}
+    #     bundle exec jekyll build 
+    #     cp -r _site/* ../${{env.PUBLISH_DIR}}/
+    #     touch ../${{env.PUBLISH_DIR}}/.nojekyll
+    
+    # Add redirects to new webpage
+    - name: Redirect to new web page
       run: |
-        cd ${{env.SRC_DIR}}
-        bundle exec jekyll build 
+        python3 redirect.py
         cp -r _site/* ../${{env.PUBLISH_DIR}}/
         touch ../${{env.PUBLISH_DIR}}/.nojekyll
 
